@@ -11,9 +11,8 @@ import javafx.scene.control.TableView;
 import javafx.scene.layout.Pane;
 import sqlartan.Sqlartan;
 import sqlartan.core.Database;
+import sqlartan.core.stream.IterableStream;
 import sqlartan.view.tabs.struct.DatabaseStructure;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * Created by julien on 30.04.16.
@@ -66,10 +65,10 @@ public class DatabaseTabsController extends TabsController {
 	 */
 	private void displayStructure() {
 		dbStructs.clear();
-		dbStructs.addAll(Stream.concat(database.tables(), database.views())
-		                       .sorted((a, b) -> a.name().compareTo(b.name()))
-		                       .map(DatabaseStructure::new)
-		                       .collect(Collectors.toList()));
+		dbStructs.addAll(IterableStream.concat(database.tables(), database.views())
+		                               .sorted((a, b) -> a.name().compareTo(b.name()))
+		                               .map(DatabaseStructure::new)
+		                               .toList());
 
 
 		structureTable.setItems(dbStructs);
